@@ -1,3 +1,7 @@
+2007-10-26  Michael Goffioul  <michael.goffioul@gmail.com>
+
+	* Makeconf.in: Remove UNSETCOMSPEC trick.
+
 2007-10-25  John W. Eaton  <jwe@octave.org>
 
 	* configure.in (AH_BOTTOM): Define OCTAVE_EMPTY_CPP_ARG here.
